[gd_scene load_steps=18 format=3 uid="uid://beoaonnb2plhq"]

[ext_resource type="FontFile" uid="uid://dckyut1557c7h" path="res://DarkTheme/Fonts/Ubuntu-L.ttf" id="1_sn6ra"]
[ext_resource type="FontFile" uid="uid://r7guvh1d66vn" path="res://Theme/HyperSuperItalic.ttf" id="2_8mymn"]
[ext_resource type="Script" path="res://Menu/ReplayViewerUI.gd" id="3_n7awp"]
[ext_resource type="Script" path="res://Menu/ReplayViewerInputHandler.gd" id="4_7wxw7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xl3p0"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4ewd"]
bg_color = Color(1, 1, 1, 0.231373)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gnfbv"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.780392, 0.67451, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofcni"]
bg_color = Color(0.858824, 0.858824, 0.858824, 1)
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 8
corner_radius_top_right = 5
corner_radius_bottom_right = 8
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vuv8h"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dlqso"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aunuk"]
bg_color = Color(0.4, 0.4, 0.4, 0.65098)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpm4"]
bg_color = Color(0.607843, 0.729412, 0.54902, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm2h7"]
bg_color = Color(0.866667, 0.298039, 0.305882, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.407843, 0.0980392, 0.109804, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjac4"]
bg_color = Color(0.498039, 0.901961, 0.352941, 1)
border_color = Color(0.407843, 0.0980392, 0.109804, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 8.0
expand_margin_right = 8.0
shadow_color = Color(0.184314, 0.352941, 0.12549, 1)
shadow_size = 1
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ef7yk"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.392157, 0.392157, 0.392157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w5lrt"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.258824, 0.258824, 0.258824, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_67hwj"]
default_font = ExtResource("2_8mymn")
default_font_size = 26
Button/colors/font_pressed_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
Button/styles/disabled = SubResource("StyleBoxFlat_xl3p0")
Button/styles/focus = SubResource("StyleBoxFlat_v4ewd")
Button/styles/hover = SubResource("StyleBoxFlat_gnfbv")
Button/styles/normal = SubResource("StyleBoxFlat_xl3p0")
Button/styles/pressed = SubResource("StyleBoxFlat_ofcni")
CheckBox/icons/checked = SubResource("PlaceholderTexture2D_vuv8h")
CheckBox/icons/unchecked = SubResource("PlaceholderTexture2D_dlqso")
CheckBox/styles/focus = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover = SubResource("StyleBoxFlat_aunuk")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_ocpm4")
CheckBox/styles/normal = SubResource("StyleBoxFlat_gm2h7")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_cjac4")
LineEdit/colors/font_uneditable_color = Color(1, 1, 1, 1)
LineEdit/fonts/font = ExtResource("1_sn6ra")
LineEdit/styles/focus = SubResource("StyleBoxFlat_ef7yk")
LineEdit/styles/normal = SubResource("StyleBoxFlat_w5lrt")

[node name="ReplayViewerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_67hwj")
script = ExtResource("3_n7awp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CurrentFrame" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "154"
horizontal_alignment = 2

[node name="SeekBar" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 7.85
step = 0.0

[node name="TotalFrames" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "15404"

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 140
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="PlayPauseButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "Play/Pause"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
layout_mode = 2
text = "Playback Speed: "

[node name="HalfSpeedButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "/2"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="DoubleSpeedButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "x2"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ResetSpeedButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset"

[node name="Control4" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PlaybackSpeedLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
text = "1.0"

[node name="Control3" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PlaybackSpeedSlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer4/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 160
alignment = 1

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Exit"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="PrevPlayerButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Prev"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="CurrentPlayer" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "kibaszotthosszyneveasdasdas"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="NextPlayerButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Next"

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="ChangeCameraButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
text = "Change Camera"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer5"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="FreeCamButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
toggle_mode = true
text = "Free Cam"

[node name="ReplayViewerInputHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_7wxw7")
